public/style.css
* {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

::-moz-selection {
    /* Code for Firefox */
    color: white;
    background: #16161D;
}

::selection {
    color: white;
    background: #16161D;
}

.container {
    display: flex;
    justify-content: center;
}

.content {
    background-color: #0002;
    padding-top: 10px;
    padding-bottom: 20px;
    margin: 10px;
    width: 50%;
}

.content label {
    font-weight: bold;
    margin: 4px;
    display: block;
    text-align: center;
}

.content div {
    margin: 5px;
    display: block;
    position: relative;

    width: 97%;
    height: 400px;
}

.content div>div {
    cursor: not-allowed;
}

.content textarea, .content div>div {
    width: 97%;
    height: 400px;
    font-size: 15px;
    background-color: white;
    border: 1px solid;
    padding: 5px;
    text-align: justify;
}
.content div>div{
    overflow: scroll;
}
/* .content p {
    background-color: white;
    border: 1px solid;
    height: 400px;
    position: relative;
    width: 97%;
    margin: auto;
} */

button {
    border: 1px solid;
    border-radius: 5px;
    padding: 10px;
    cursor: pointer;
}

.wrapper {
    text-align: center;
}

button {
    font-weight: bold;
    font-size: larger;
    padding: 1%;
    transition-duration: .1s;
}

#btn-check {
    background-color: #16161D;
    color: white;
    min-width: 20%;


}

#btn-check:hover {
    background-color: #18182D;
    transform: scale(0.98);
}


#btn-save {
    color: #16161D;
    background-color: white;
    /* width: 20%; */

}

#btn-save:hover {
    background-color: #F0F0F0;
    transform: scale(0.98);
}

.added {
    background-color: lightgreen;
}

.removed {
    background-color: lightcoral;
}

footer {
    position: fixed;
    bottom: 0;
    text-align: center;
    padding: 0;
    width: 100%;
    background-color: #16161D;
    color: white;
    left: 0;
    font-weight: bold;
    align-items: center;
    justify-content: center;
    display: flex;
    max-height: 60px;
}

footer img {
    width: 50px;
    height: 50px;
    display: inline-block;
    /* background-color : red; */
}

footer a {
    text-decoration: none;
    color: white;
}

.alert {
    position: absolute;
    margin: auto;
    bottom: 70px;
    z-index: 100000;
    background-color: white;
    border: 1px solid;
    border-radius: 4px;
    height: 50px;
    text-align: center;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    display: none;
    min-width: 50%;
    /* box-shadow: 2px -2px 1px #0003; */
}

#alert-text {
    font-weight: 700;
    margin-left: 10px;
}

#alert-btn {
    margin-left: auto;
    width: 30%;
    margin: 5px;
    font-weight: lighter;
    background-color: #16161D;
    color: white;
}

